--- a/index.html
+++ b/index.html
@@ -6,21 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" type="text/css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.css" type="text/css">
     <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
     <title>Document</title>
 </head>
 
-<body>
+<body data-spy="scroll" data-target=".navbar" data-offset="110">
     <header>
         <!-- Nav Bar -->
         <!-- Bootstrap Nav Bar -->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top flex-row">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top flex-row" id="nav">
             <a class="navbar-brand d-none d-sm-block" href="#">
                 <img src="assets/images/logo.png" alt="Logo" class="responsive-img logo img-fluid">
             </a>
             <a class="navbar-brand d-sm-none" href="#">
-                <img src="assets/images/logo-sm.png" alt="Logo" class="responsive-img logo img-fluid">
+                <img src="assets/images/logo-sm.png" alt="Logo" class="responsive-img logo img-fluaid">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -28,19 +28,25 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link uppercase" href="#"><span>About</span></a>
+                        <a class="nav-link uppercase" href="#about"><span>About</span></a>
                     </li>
                     <li class="nav-item uppercase">
-                        <a class="nav-link" href="#"><span>Music</span></a>
+                        <a class="nav-link" href="#music"><span>Music</span></a>
                     </li>
                     <li class="nav-item uppercase">
-                        <a class="nav-link" href="#"><span>Merch</span></a>
+                        <a class="nav-link" href="#merch"><span>Merch</span></a>
                     </li>
                     <li class="nav-item uppercase">
-                        <a class="nav-link" href="#"><span>Video</span></a>
+                        <a class="nav-link" href="#video"><span>Video</span></a>
                     </li>
                     <li class="nav-item uppercase">
-                        <a class="nav-link" href="#"><span>Tour</span></a>
+                        <a class="nav-link" href="#tour"><span>Tour</span></a>
+                    </li>
+                    <li class="nav-item uppercase">
+                        <a class="nav-link" href="#news"><span>News</span></a>
+                    </li>
+                    <li class="nav-item uppercase">
+                        <a class="nav-link" href="#contact"><span>Contact</span></a>
                     </li>
                 </ul>
             </div>
@@ -118,27 +124,75 @@
     <!-- About -->
     <section class="container-wrapper--about" id="about">
         <div class="container-fluid about-content-container">
-            <div class="col-lg-6">
-                <h2 class="justify-content-center about-heading"><i class="fa fa-info-circle" aria-hidden="true"></i> About</h2>
-                <div class="row bio-content">
-                    <p>Many bands aspire to be timeless, or have a sound that transcends the whims of musical fashion. But The Cranberries are one of the few to have achieved that. Play one of the Irish rock group’s early anthems such as “Linger” or “Dreams”,
-                        and they sound as fresh - and deliver as much of an emotional sucker-punch - as when they captured a generation’s hearts in the 1990s.</p>
+            <div class="row">
+                <div class="col-sm-6">
+                    <h2 class="justify-content-center about-heading"><i class="fa fa-info-circle" aria-hidden="true"></i> About</h2>
+                    <div class="bio-content">
+                        <p>Many bands aspire to be timeless, or have a sound that transcends the whims of musical fashion. But The Cranberries are one of the few to have achieved that. Play one of the Irish rock group’s early anthems such as “Linger” or
+                            “Dreams”, and they sound as fresh - and deliver as much of an emotional sucker-punch - as when they captured a generation’s hearts in the 1990s.</p>
 
-                    <p>Now, nearly 30 years after the quartet of singer/songwriter and musician Dolores O’Riordan, co-songwriter and lead guitarist Noel Hogan, bassist Mike Hogan and drummer Fergal Lawler first appeared, they are returning with their eighth
-                        album In the End. After the sad and unexpected passing of Dolores on January 15th 2018, it will be their last - and is among the most complete works they have ever produced. </p>
+                        <p>Now, nearly 30 years after the quartet of singer/songwriter and musician Dolores O’Riordan, co-songwriter and lead guitarist Noel Hogan, bassist Mike Hogan and drummer Fergal Lawler first appeared, they are returning with their
+                            eighth album In the End. After the sad and unexpected passing of Dolores on January 15th 2018, it will be their last - and is among the most complete works they have ever produced. </p>
 
-                    <p>It’s remarkable to look back and think just how how much of a cultural force The Cranberries have been, not only in the Ireland, UK and US, but across the globe: over their career, they have sold more than 40 million albums, making
-                        them one of the world’s biggest rock acts, as well as a staple on TV and film soundtracks. Through all their success, though, they have never compromised on their key trait: an honesty and directness that cuts to the soul. </p>
+                        <p>It’s remarkable to look back and think just how how much of a cultural force The Cranberries have been, not only in the Ireland, UK and US, but across the globe: over their career, they have sold more than 40 million albums, making
+                            them one of the world’s biggest rock acts, as well as a staple on TV and film soundtracks. Through all their success, though, they have never compromised on their key trait: an honesty and directness that cuts to the soul.
+                        </p>
 
-                    <p>Central to their expression of emotional truth, of course, has been Dolores’ inimitable voice. It was an instrument that could be angelically soft or blisteringly angry to equally stunning effect - and was a match for opera legend
-                        Luciano Pavarotti when they duetted on an enduringly stunning rendition of Ave Maria in 1995.</p>
+                        <p>Central to their expression of emotional truth, of course, has been Dolores’ inimitable voice. It was an instrument that could be angelically soft or blisteringly angry to equally stunning effect - and was a match for opera legend
+                            Luciano Pavarotti when they duetted on an enduringly stunning rendition of Ave Maria in 1995.</p>
 
-                    <p>But the band’s power has also come from their gliding melodies and Dolores’ unvarnished lyrics, which were never less than absolutely sincere, whether she was writing about personal relationships or political violence - they all came
-                        back to “how human beings treat each other,” as she once described. “She truly didn’t really care what people thought about what she was going to say” says Noel. “It was a case of ‘If I feel strongly enough about this, I’m going
-                        to write about it, and whatever way the chips may fall, so be it. If I get slated for it, so be it.’”</p>
+                        <p>But the band’s power has also come from their gliding melodies and Dolores’ unvarnished lyrics, which were never less than absolutely sincere, whether she was writing about personal relationships or political violence - they all
+                            came back to “how human beings treat each other,” as she once described. “She truly didn’t really care what people thought about what she was going to say” says Noel. “It was a case of ‘If I feel strongly enough about this,
+                            I’m going to write about it, and whatever way the chips may fall, so be it. If I get slated for it, so be it.’”</p>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <div class="profile-pics-container">
+                        <div class="row profile-pics-row">
+                            <div class="col profile-container">
+                                <img src="assets/images/dolores-oriordan-bio.jpg" alt="Dolores O'Riordan Headshot" class="profile-pics" id="dolores-pic"></img>
+                                <div class="profile-overlay">
+                                    <div class="hover-text">
+                                        <p>Dolores O'Riordan</p>
+                                        <h6>Lead Singer</h6>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col profile-container">
+                                <img src="assets/images/noel-hogan-bio.jpg" alt="Noel Hogan Headshot" class="profile-pics" id="noel-pic"></img>
+                                <div class="profile-overlay">
+                                    <div class="hover-text">
+                                        <p>Noel Hogan</p>
+                                        <h6>Lead Guitarist</h6>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row profile-pics-row" id="profile-row-2">
+                            <div class="col profile-container">
+                                <img src="assets/images/mike-hogan-bio.jpg" alt="Mike Hogan Headshot" class="profile-pics" id="mike-pic"></img>
+                                <div class="profile-overlay">
+                                    <div class="hover-text">
+                                        <p>Mike Hogan</p>
+                                        <h6>Bassist</h6>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col profile-container">
+                                <img src="assets/images/fergal-lawler-bio.jpg" alt="Fergal Lawler Headshot" class="profile-pics" id="fergal-pic">
+                                <div class="profile-overlay">
+                                    <div class="hover-text">
+                                        <p>Fergal Lawler</p>
+                                        <h6>Drummer</h6>
+                                    </div>
+                                </div>
+                                </img>
+
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
     </section>
 
 
@@ -232,16 +286,16 @@
     </section>
 
     <!-- Merch -->
-    <!--<section class="container-wrapper--merch" id="merch">-->
-    <!--    <div class="container-fluid merch-content-container">-->
-    <!--        <h2 class="justify-content-center merch-heading"><i class="fa fa-shopping-basket" aria-hidden="true"></i> Merch</h2>-->
-    <!--    </div>-->
-    <!--</section>-->
+    <section class="container-wrapper--merch" id="merch">
+        <div class="container-fluid merch-content-container">
+            <h2 class="justify-content-center merch-heading"><i class="fa fa-shopping-basket" aria-hidden="true"></i> Merch</h2>
+        </div>
+    </section>
 
     <!-- Video -->
     <section class="container-wrapper--video" id="video">
         <div class="container-fluid video-content-container">
-            <h2 class="justify-content-center video-heading"><i class="fa fa-youtube-play" aria-hidden="true"></i> Video</h2>
+            <h2 class="justify-content-center video-heading"><i class="fab fa-youtube" aria-hidden="true"></i> Video</h2>
         </div>
         <div class="row">
             <div class="col-sm-2">
@@ -254,7 +308,7 @@
         </div>
     </section>
 
-    <section class="container-wrapper--tour" id="video">
+    <section class="container-wrapper--tour" id="tour">
         <div class="container-fluid tour-content-container">
             <h2 class="container-fluid tour-heading"><i class="fa fa-bus" aria-hidden="true"></i> Tour</h2>
         </div>
@@ -302,6 +356,22 @@
                 </tr>
             </tbody>
         </table>
+    </section>
+
+    <!-- News -->
+    <section class="container-wrapper--news" id="news">
+        <div class="container-fluid news-content-container">
+            <h2 class="justify-content-center news-heading"><i class="far fa-newspaper" aria-hidden="true"></i> News</h2>
+
+        </div>
+    </section>
+
+    <!-- Contact -->
+    <section class="container-wrapper--contact" id="contact">
+        <div class="container-fluid news-content-container">
+            <h2 class="justify-content-center contact-heading"><i class="far fa-comments" aria-hidden="true"></i> Contact</h2>
+
+        </div>
     </section>
 
     <footer class="container-fluid bg-dark">
