Styled buttons; styled several section backgrounds and headings; Reordered Bio section so profile pics display after text on mobile and before on all other devices

--- a/index.html
+++ b/index.html
@@ -356,28 +356,19 @@
     <section class="container-wrapper--about">
         <div class="container-fluid about-content-container">
             <div class="row">
-                <div class="col-sm-6">
+                <div class="col-sm-6 order-sm-12">
                     <h2 class="justify-content-center about-heading"><i class="fa fa-info-circle" aria-hidden="true"></i><span id="about"></span> Bio</h2>
                     <div class="bio-content">
-                        <p>Many bands aspire to be timeless, or have a sound that transcends the whims of musical fashion. But The Cranberries are one of the few to have achieved that. Play one of the Irish rock group’s early anthems such as “Linger” or
-                            “Dreams”, and they sound as fresh - and deliver as much of an emotional sucker-punch - as when they captured a generation’s hearts in the 1990s.</p>
+                        <p>The Cranberries were an Irish rock band formed in Limerick, Ireland in 1989 by lead singer Niall Quinn, guitarist Noel Hogan, bassist Mike Hogan, and drummer Fergal Lawler. Quinn was replaced as lead singer by Dolores O'Riordan in 1990. The band officially classify themselves as an alternative rock group, but incorporate aspects of indie pop, post-punk, Irish folk, and pop rock into their sound.</p>
 
-                        <p>Now, nearly 30 years after the quartet of singer/songwriter and musician Dolores O’Riordan, co-songwriter and lead guitarist Noel Hogan, bassist Mike Hogan and drummer Fergal Lawler first appeared, they are returning with their
-                            eighth album In the End. After the sad and unexpected passing of Dolores on January 15th 2018, it will be their last - and is among the most complete works they have ever produced. </p>
+                        <p>The Cranberries rose to international fame in the 1990s with their debut album Everybody Else Is Doing It, So Why Can't We?, which became a commercial success. The band has sold over 40 million records worldwide, achieved five top 20 albums on the Billboard 200 chart (Everybody Else Is Doing It, So Why Can't We?; No Need to Argue, To the Faithful Departed, Bury the Hatchet, and Stars: The Best of 1992-2002) as well as having eight top 20 singles on the Modern Rock Tracks chart ("Linger", "Dreams", "Zombie", "Ode to My Family", "Ridiculous Thoughts", "Salvation", "Free to Decide", and "Promises").                        </p>
 
-                        <p>It’s remarkable to look back and think just how how much of a cultural force The Cranberries have been, not only in the Ireland, UK and US, but across the globe: over their career, they have sold more than 40 million albums, making
-                            them one of the world’s biggest rock acts, as well as a staple on TV and film soundtracks. Through all their success, though, they have never compromised on their key trait: an honesty and directness that cuts to the soul.
-                        </p>
+                        <p>In early 2009, after a six-year hiatus, the Cranberries reunited and began a North American tour followed by shows in Latin America and Europe. The band recorded their sixth album Roses in May 2011, and released it in February 2012. Something Else, an album covering many of the band's most popular songs along with new orchestral accompaniments provided by the Irish Chamber Orchestra, was released in April 2017. The album also included three new songs: "The Glory", "Rupture" and "Why?"</p>
 
-                        <p>Central to their expression of emotional truth, of course, has been Dolores’ inimitable voice. It was an instrument that could be angelically soft or blisteringly angry to equally stunning effect - and was a match for opera legend
-                            Luciano Pavarotti when they duetted on an enduringly stunning rendition of Ave Maria in 1995.</p>
-
-                        <p>But the band’s power has also come from their gliding melodies and Dolores’ unvarnished lyrics, which were never less than absolutely sincere, whether she was writing about personal relationships or political violence - they all
-                            came back to “how human beings treat each other,” as she once described. “She truly didn’t really care what people thought about what she was going to say” says Noel. “It was a case of ‘If I feel strongly enough about this,
-                            I’m going to write about it, and whatever way the chips may fall, so be it. If I get slated for it, so be it.’”</p>
+                        <p>On 15 January 2018, lead singer Dolores O'Riordan was found dead of drowning in a London hotel room. She had recently arrived in London for a recording session. The Cranberries confirmed in September 2018 that they would not be continuing as a band, releasing their final album In the End in April 2019 and disbanding afterward. Noel Hogan stated: “the Cranberries was the four of us. We don’t want to do this without Dolores. So we’re going to leave it after this.”</p>
                     </div>
                 </div>
-                <div class="col-sm-6">
+                <div class="col-sm-6 order-sm-1">
                     <div class="profile-pics-container">
                         <div class="row profile-pics-row">
                             <div class="col profile-container">
